kubernetes-pvc-htpasswd/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: verdaccio
  name: verdaccio
spec:
  ports:
    - port: 80
      targetPort: 4873
  type: NodePort
  selector:
    app: verdaccio
